# green-fintech-baas

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  NEW_RELEASE_NOTES.md  README.md  alembic.ini  clean.sh  compose.yaml  docker-compose.yml  docker-entrypoint.sh  exec.sh  fetch.py  git.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  ci.yml  commitlint.yml  realease.yml  release.yaml  security.yaml
alembic/: env.py
alembic/versions/: 2026_03_03_1515-11e3802a739b_init_schema.py  2026_03_06_1420-e20348e0f9e3_init.py  2026_03_12_0148-b519a33e577b_init.py  2026_03_12_0228-c82da8e38148_re_seed.py  6df59d73aea3_create_companies_table.py
scripts/: api-helper.sh  common.sh  db-helper.sh  docker-entrypoint.sh  init-db.sql  pg-helper.sh  postgresql.conf  postgresql.custom.conf  rd-helper.sh  seed_db.py
src/app/: __init__.py  database.py  main.py
src/app/api/dependencies/: auth.py  cache.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: companies.py
src/app/core/: config.py  logger.py  redis.py
src/app/database/: __init__.py  session.py
src/app/models/: __init__.py  company.py  environmental_metric.py  loan_simulation.py  national_energy.py  regional_emission.py
src/app/schemas/: company.py  company_schema.py  environmental_metric.py  environmental_metric_schema.py  loan_simulation.py  loan_simulation_schema.py  national_energy_schema.py  regional_emission_schema.py
src/app/services/: __init__.py  company_service.py  environmental_metric_service.py  loan_simulation_service.py  opencorporates.py  opencorporates_service.py  pdf_service.py
tests/: api_test.py  config_test.py  conftest.py  db_test.py  import_test.py
tests/docker/: compose.yaml  init-test-db.sql
tests/fixtures/: companies.json  metrics.json  opencorporates_hsbc.json  opencorporates_shell.json  opencorporates_tesco.json
tests/integration/: company_crud_test.py  company_service_test.py  health_test.py  loan_simulation_service_test.py
tests/integration/api_endpoint_tests/: auth_api_test.py  companies_api_test.py  companies_router_test.py  health_api_test.py  models_api_test.py
tests/unit/: company_schema_test.py  import_test.py  loan_math_test.py  logic_test.py  opencorporates_service_test.py  opencorporates_test.py  pdf_service_test.py  schema_validation_test.py
