[project]
name = "app"
version = "0.1.0"
authors = [
    { name = "Andreas Bazigos", email = "sc222ab@leeds.ac.uk" },
]

description = "Green FinTech BaaS Simulator API for sustainable finance"
readme = "README.md"
requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]

license-files = ["LICEN[CS]E*"]
license = "MIT"


# Keywords (translated to tags on the package index)
keywords = ["fintech", "esg", "api", "fastapi"]

dependencies = [
    "fastapi==0.129.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlalchemy[asyncio] (>=2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)"
    # SQLAlchemy
    # Alembic
    # Redis
]

[project.urls]
repository = "https://github.com/scAB1001/green-fintech-baas"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "twine (>=6.2.0,<7.0.0)"
]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
prod = [
    "uvicorn (>=0.40.0,<0.41.0)"
]
docs = [
    "sphinx (>=9.1.0,<10.0.0)"
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "B", "F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
