[project]
name = "app"
version = "0.1.0"
authors = [
    { name = "Andreas Bazigos", email = "sc222ab@leeds.ac.uk" },
]

description = "Green FinTech BaaS Simulator API for sustainable finance"
readme = "README.md"
requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]

license-files = ["LICEN[CS]E*"]
license = "MIT"


# Keywords (translated to tags on the package index)
keywords = ["fintech", "esg", "api", "fastapi"]

dependencies = [
    # FastAPI web framework for building the API
    "fastapi==0.129.0",

    # HTTP client for making requests to external services (e.g., ESG data providers)
    "httpx>=0.28.1",

    # Pydantic for data validation and settings management
    "pydantic>=2.12.5",

    # Pydantic Settings for managing application configuration
    "pydantic-settings>=2.12.0",

    # SQLAlchemy for database interactions (asyncio support for async operations)
    "sqlalchemy[asyncio] (>=2.0.0)",

    # Asyncpg for PostgreSQL database driver (async support)
    "asyncpg (>=0.31.0,<0.32.0)",


    # Psycopg for PostgreSQL database driver (sync support)
    "psycopg[binary] (>=3.3.2,<4.0.0)",

    # Alembic for database migrations
    "alembic (>=1.18.4,<2.0.0)",

    # psycopg2-binary for PostgreSQL database driver (sync support, alternative to psycopg) (needed for Alembic to work with PostgreSQL)
    "psycopg2-binary (>=2.9.11,<3.0.0)"

    # TODO: Decide which drivers are needed.
    # Psycopg is the new generation PostgreSQL driver for Python, designed to be faster and more efficient than psycopg2.
    # It supports both sync and async operations, but asyncpg is specifically optimized for async use cases.
    # If you are using SQLAlchemy with asyncio, asyncpg is the recommended driver.
    # However, if you need to support both sync and async operations, you might want to include both drivers.
    # Alembic, for example, may require a sync driver like psycopg2 for certain operations.

    # TODO: Redis
]

[project.urls]
repository = "https://github.com/scAB1001/green-fintech-baas"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]
dev = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.15.1,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "twine (>=6.2.0,<7.0.0)"
]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    # "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-asyncio (>=0.23.8)",
    "pytest-docker (>=3.2.5,<4.0.0)"
]
prod = [
    "uvicorn (>=0.40.0,<0.41.0)"
]
docs = [
    "sphinx (>=9.1.0,<10.0.0)"
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = ["tests"]
python_files = "*_test.py"
python_classes = "Test*" # TODO: Check this
python_functions = "test_*"
asyncio_mode = "auto"
# asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "session"

markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require Docker/database)",
    "crud: CRUD operation tests",
    "api: API endpoint tests",
    "slow: Tests that take > 5 seconds",
    "smoke: Quick smoke tests for CI",
]


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "B", "F401"]  # Ignore unused argument and import errors in tests
"alembic/versions/*.py" = [
    "E501",   # Ignore line length in migrations
    "D100",   # Allow missing docstrings
]

[tool.ruff.lint.pydocstyle]
convention = "google"
